[gd_scene load_steps=55 format=3 uid="uid://c8efbjo00nxka"]

[ext_resource type="Script" path="res://Scripts/bro.gd" id="1_q2lwo"]
[ext_resource type="Texture2D" uid="uid://8edv7aq00nug" path="res://Piskel/CHOPPINGMAN.png" id="2_ln826"]
[ext_resource type="Texture2D" uid="uid://xtldd1jripwv" path="res://Piskel/THEMAN.png" id="3_mvcaq"]
[ext_resource type="Texture2D" uid="uid://b7uqwsymc5c03" path="res://Piskel/PLANTINGMAN.png" id="4_j05ci"]
[ext_resource type="Texture2D" uid="uid://fnhxoxonyec1" path="res://Piskel/WALKINGMAN (1).png" id="5_wx04x"]
[ext_resource type="Texture2D" uid="uid://c2vfmiyno1nc2" path="res://Piskel/WATERINGMAN.png" id="6_1bsly"]
[ext_resource type="Script" path="res://Scripts/finite_state_machine.gd" id="7_k062y"]
[ext_resource type="Script" path="res://Scripts/Wander.gd" id="8_hcuef"]
[ext_resource type="Script" path="res://Scripts/IdleState.gd" id="9_ns0vr"]
[ext_resource type="Script" path="res://Scripts/WateringState.gd" id="10_nrrao"]
[ext_resource type="Script" path="res://Scripts/ChoppingState.gd" id="11_lb5h1"]
[ext_resource type="Script" path="res://Scripts/PlantingState.gd" id="12_lmnfy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xvblx"]
atlas = ExtResource("2_ln826")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6p8u"]
atlas = ExtResource("2_ln826")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg8al"]
atlas = ExtResource("2_ln826")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkd7i"]
atlas = ExtResource("2_ln826")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cjtq"]
atlas = ExtResource("2_ln826")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmfqf"]
atlas = ExtResource("2_ln826")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_txbek"]
atlas = ExtResource("2_ln826")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86xxo"]
atlas = ExtResource("2_ln826")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hge1"]
atlas = ExtResource("3_mvcaq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekuuy"]
atlas = ExtResource("3_mvcaq")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lra5p"]
atlas = ExtResource("4_j05ci")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o8bi"]
atlas = ExtResource("4_j05ci")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgqa7"]
atlas = ExtResource("4_j05ci")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5jrm"]
atlas = ExtResource("4_j05ci")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oret3"]
atlas = ExtResource("4_j05ci")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ugt5"]
atlas = ExtResource("4_j05ci")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv04h"]
atlas = ExtResource("4_j05ci")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm38s"]
atlas = ExtResource("4_j05ci")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0dgw"]
atlas = ExtResource("4_j05ci")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mesb2"]
atlas = ExtResource("4_j05ci")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a82f8"]
atlas = ExtResource("4_j05ci")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kron7"]
atlas = ExtResource("5_wx04x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p2bx"]
atlas = ExtResource("5_wx04x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbrlu"]
atlas = ExtResource("5_wx04x")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0pmo"]
atlas = ExtResource("5_wx04x")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2ff4"]
atlas = ExtResource("6_1bsly")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0au5"]
atlas = ExtResource("6_1bsly")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4y73"]
atlas = ExtResource("6_1bsly")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5jbv"]
atlas = ExtResource("6_1bsly")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmlyo"]
atlas = ExtResource("6_1bsly")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c26u7"]
atlas = ExtResource("6_1bsly")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmbcc"]
atlas = ExtResource("6_1bsly")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dox2l"]
atlas = ExtResource("6_1bsly")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_isg8w"]
atlas = ExtResource("6_1bsly")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo374"]
atlas = ExtResource("6_1bsly")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf4ax"]
atlas = ExtResource("6_1bsly")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4i06"]
atlas = ExtResource("6_1bsly")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwlr3"]
atlas = ExtResource("6_1bsly")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oectt"]
atlas = ExtResource("6_1bsly")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lni8s"]
atlas = ExtResource("6_1bsly")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjjjo"]
atlas = ExtResource("6_1bsly")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_it7d0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvblx")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_a6p8u")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_pg8al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkd7i")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_0cjtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmfqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txbek")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_86xxo")
}],
"loop": false,
"name": &"Chopping",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hge1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekuuy")
}],
"loop": true,
"name": &"Idle",
"speed": 1.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lra5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o8bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgqa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5jrm")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_oret3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ugt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv04h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm38s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0dgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mesb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a82f8")
}],
"loop": false,
"name": &"Planting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kron7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p2bx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbrlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0pmo")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2ff4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0au5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4y73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5jbv")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_pmlyo")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_c26u7")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_cmbcc")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_dox2l")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_isg8w")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_jo374")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_bf4ax")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_d4i06")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_iwlr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oectt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lni8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjjjo")
}],
"loop": false,
"name": &"Watering",
"speed": 5.0
}]

[node name="Bro" type="Node2D"]
script = ExtResource("1_q2lwo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_it7d0")
animation = &"Walking"

[node name="finite_state_machine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("7_k062y")
state = NodePath("IdleState")

[node name="WanderState" type="Node" parent="finite_state_machine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("8_hcuef")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="IdleState" type="Node" parent="finite_state_machine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("9_ns0vr")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="WateringState" type="Node" parent="finite_state_machine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("10_nrrao")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="ChoppingState" type="Node" parent="finite_state_machine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("11_lb5h1")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="PlantingState" type="Node" parent="finite_state_machine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("12_lmnfy")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
